[package]
name = "rercon"
description = "A simple RCON library with automatic reconnection support"
repository = "https://github.com/ikkerens/rercon"
authors = ["Rens Rikkerink <contact@ikkerens.com>"]
license = "MIT"
edition = "2018"
version = "1.1.1"
exclude = ["/README.md", "/.gitignore", "/.github/"]

[dependencies]
byteorder = "1.3"
