[package]
name = "rercon"
description = "A simple RCON library with automatic reconnection support"
repository = "https://github.com/ikkerens/rercon"
authors = ["Rens Rikkerink <contact@ikkerens.com>"]
license = "MIT"
edition = "2018"
version = "0.0.0-dev"
exclude = ["/README.md"]

[dependencies]
byteorder = "1.3"
tokio = { version = "0.2", features = [ "tcp", "io-util", "time" ] }

[dev-dependencies.tokio]
version = "*"
features = [ "rt-core", "macros" ]

[features]
default = [ "reconnection" ]
reconnection = [ "tokio/sync" ]