[package]
name = "rercon"
description = "A simple RCON library with automatic reconnection support"
repository = "https://github.com/ikkerens/rercon"
authors = ["Rens Rikkerink <contact@ikkerens.com>"]
license = "MIT"
edition = "2018"
version = "0.0.0-dev"

[dependencies]
byteorder = "1.4"
tokio = { version = "1.10", features = [ "io-util", "time", "macros", "net", "rt" ] }

[dev-dependencies.tokio]
version = "*"
features = [ "rt-multi-thread", "macros" ]

[features]
default = [ "reconnection" ]
reconnection = [ "tokio/sync" ]
